revamped login form and fixed main header spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -580,12 +580,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.common-link-filter-active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
 .fixed {
   position: fixed;
 }
@@ -634,11 +628,17 @@ video {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
 }
-.mt-4 {
-  margin-top: 1rem;
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 .mt-5 {
   margin-top: 1.25rem;
+}
+.mt-4 {
+  margin-top: 1rem;
 }
 .mr-2 {
   margin-right: 0.5rem;
@@ -648,9 +648,6 @@ video {
 }
 .ml-2 {
   margin-left: 0.5rem;
-}
-.mb-2 {
-  margin-bottom: 0.5rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
@@ -681,6 +678,9 @@ video {
 }
 .hidden {
   display: none;
+}
+.h-7 {
+  height: 1.75rem;
 }
 .h-28 {
   height: 7rem;
@@ -798,11 +798,11 @@ video {
   -moz-column-gap: 0.25rem;
        column-gap: 0.25rem;
 }
-.gap-y-1 {
-  row-gap: 0.25rem;
-}
 .self-center {
   align-self: center;
+}
+.justify-self-center {
+  justify-self: center;
 }
 .overflow-y-auto {
   overflow-y: auto;
@@ -812,6 +812,9 @@ video {
 }
 .overflow-y-scroll {
   overflow-y: scroll;
+}
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 .break-words {
   overflow-wrap: break-word;
@@ -837,19 +840,12 @@ video {
 .border-2 {
   border-width: 2px;
 }
-.border {
-  border-width: 1px;
-}
 .border-b-2 {
   border-bottom-width: 2px;
 }
 .border-blue-400 {
   --tw-border-opacity: 1;
   border-color: rgb(96 165 250 / var(--tw-border-opacity));
-}
-.border-blue-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(147 197 253 / var(--tw-border-opacity));
 }
 .border-b-black {
   --tw-border-opacity: 1;
@@ -883,10 +879,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(34 211 238 / var(--tw-bg-opacity));
 }
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
 .bg-blue-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
@@ -919,15 +911,14 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
-.bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
 .p-4 {
   padding: 1rem;
 }
 .p-2 {
   padding: 0.5rem;
+}
+.p-1 {
+  padding: 0.25rem;
 }
 .py-2 {
   padding-top: 0.5rem;
@@ -941,9 +932,13 @@ video {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 .pl-4 {
   padding-left: 1rem;
@@ -1012,9 +1007,6 @@ video {
 .opacity-100 {
   opacity: 1;
 }
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
 
 
 :root{
@@ -1042,7 +1034,7 @@ area#background_color_1{
 }
 main>header{
   display:grid;
-  grid-template-columns: 2fr 6fr 1fr 1fr;
+  grid-template-columns: 6fr 10fr 6fr;
   align-items:center;
   background-color:#d2afe7;
   padding:1em;
@@ -1066,7 +1058,6 @@ main>header span{
 main > header a.logout_button {
   justify-self: center;
   color: var(--primary-color);
-  margin-right: 30px;
 }
 main > header > .search_bar {
   margin: auto;
@@ -1266,16 +1257,30 @@ article #postCardInfo > a .arrows {
 }
 #content>form{
   margin:0 auto;
-  padding:1em;
-  max-width:20em;
-  border:1px solid #d2afe7
+  padding:40px;
+  width: 350px;
+  background-color:white;
+  border-radius: 20px;
+}
+#content > form > label{
+  font-family:'Inter';
+}
+#content>form button, #content>form .button{
+  background-color: var(--primary-color);
+  color: white;
+  border-radius: 5px;
 }
 #content>form .error{
   font-weight:bold;
   color:#f33
 }
 #content>form input{
-  background-color:white
+  background-color:#f3f3f3f3;
+  border: solid 1px var(--primary-color);
+}
+#content>form input:focus{
+  outline: none !important;
+  box-shadow:0 1px 0 var(--primary-color);
 }
 #posts article.post header:hover a.delete {
   display: inline;
@@ -1328,12 +1333,6 @@ section.content .card-body > *{
 #content label {
   font-weight: normal;
 }
-#content > form {
-  margin: 0 auto;
-  padding: 1em;
-  max-width: 20em;
-  border: 1px solid #d2afe7;
-}
 #content > form .error {
   font-weight: bold;
   color: #ff3333;
@@ -1341,6 +1340,26 @@ section.content .card-body > *{
 #content > form input {
   background-color: white;
 }
+
+#content > form button, .button {
+  background-color: var(--primary-color);
+  border: solid 2px var(--primary-color);
+  padding: 1px 15px;
+  color: white
+}
+
+#content > form button:hover, #content > form .button:hover{
+  transition: all 0.45s cubic-bezier(0.19, 1, 0.22, 1);
+  background-color: white;
+  color: var(--primary-color);
+  border: 2px solid var(--primary-color);
+}
+
+input:checked, input:focus{
+  outline: none !important;
+}
+
+
 @media (max-width: 70em) {
   #posts {
     grid-template-columns: repeat(2, 1fr);
@@ -1378,6 +1397,10 @@ section.content .card-body > *{
       border-bottom:1px solid rgba(96,108,118,0.4)
   }
 }
+.before\:content-\[\'Pending\'\]::before {
+  --tw-content: 'Pending';
+  content: var(--tw-content);
+}
 .hover\:bg-green-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(21 128 61 / var(--tw-bg-opacity));
@@ -1386,9 +1409,38 @@ section.content .card-body > *{
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
+.hover\:bg-green-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+.hover\:bg-red-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+.hover\:bg-orange-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
 .hover\:no-underline:hover {
   text-decoration-line: none;
+}
+.hover\:before\:content-\[\'Cancel\'\]:hover::before {
+  --tw-content: 'Cancel';
+  content: var(--tw-content);
+}
+.active\:common-link-filter-active:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.active\:bg-red-700:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+.group:hover .group-hover\:block {
+  display: block;
 }
