--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -80,7 +80,7 @@ area#background_color_1{
 }
 main>header{
   display:grid;
-  grid-template-columns: 2fr 6fr 1fr 1fr;
+  grid-template-columns: 6fr 10fr 6fr;
   align-items:center;
   background-color:#d2afe7;
   padding:1em;
@@ -104,7 +104,6 @@ main>header span{
 main > header a.logout_button {
   justify-self: center;
   color: var(--primary-color);
-  margin-right: 30px;
 }
 main > header > .search_bar {
   margin: auto;
@@ -304,16 +303,30 @@ article #postCardInfo > a .arrows {
 }
 #content>form{
   margin:0 auto;
-  padding:1em;
-  max-width:20em;
-  border:1px solid #d2afe7
+  padding:40px;
+  width: 350px;
+  background-color:white;
+  border-radius: 20px;
+}
+#content > form > label{
+  font-family:'Inter';
+}
+#content>form button, #content>form .button{
+  background-color: var(--primary-color);
+  color: white;
+  border-radius: 5px;
 }
 #content>form .error{
   font-weight:bold;
   color:#f33
 }
 #content>form input{
-  background-color:white
+  background-color:#f3f3f3f3;
+  border: solid 1px var(--primary-color);
+}
+#content>form input:focus{
+  outline: none !important;
+  box-shadow:0 1px 0 var(--primary-color);
 }
 #posts article.post header:hover a.delete {
   display: inline;
@@ -366,12 +379,6 @@ section.content .card-body > *{
 #content label {
   font-weight: normal;
 }
-#content > form {
-  margin: 0 auto;
-  padding: 1em;
-  max-width: 20em;
-  border: 1px solid #d2afe7;
-}
 #content > form .error {
   font-weight: bold;
   color: #ff3333;
@@ -379,6 +386,26 @@ section.content .card-body > *{
 #content > form input {
   background-color: white;
 }
+
+#content > form button, .button {
+  background-color: var(--primary-color);
+  border: solid 2px var(--primary-color);
+  padding: 1px 15px;
+  color: white
+}
+
+#content > form button:hover, #content > form .button:hover{
+  transition: all 0.45s cubic-bezier(0.19, 1, 0.22, 1);
+  background-color: white;
+  color: var(--primary-color);
+  border: 2px solid var(--primary-color);
+}
+
+input:checked, input:focus{
+  outline: none !important;
+}
+
+
 @media (max-width: 70em) {
   #posts {
     grid-template-columns: repeat(2, 1fr);
